5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1888_3139.log
== TEST (2019-07-09 16:28:37) 
-- CODE:
from numpy import*
x = v.0, v.1, v.2, v.3
	print(v.2)
round(v.0, v.3)
-- ERROR:
File "XXXX", line 2
    x = v.0, v.1, v.2, v.3
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:28:44) 
-- CODE:
from numpy import*
x = v.0, v.1, v.2, v.3
	print(v.2)
round(v.0, v.3)
-- EXECUTION TIME:
0.633419
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 2
    x = v.0, v.1, v.2, v.3
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:28:45) 
-- CODE:
from numpy import*
x = v.0, v.1, v.2, v.3
	print(v.2)
round(v.0, v.3)
-- EXECUTION TIME:
1.85285
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 2
    x = v.0, v.1, v.2, v.3
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:28:47) 
-- CODE:
from numpy import*
x = v.0, v.1, v.2, v.3
	print(v.2)
round(v.0, v.3)
-- EXECUTION TIME:
2.56592
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 2
    x = v.0, v.1, v.2, v.3
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:28:47) 
-- CODE:
from numpy import*
x = v.0, v.1, v.2, v.3
	print(v.2)
round(v.0, v.3)
-- EXECUTION TIME:
3.25236
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 2
    x = v.0, v.1, v.2, v.3
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:28:47) 
-- CODE:
from numpy import*
x = v.0, v.1, v.2, v.3
	print(v.2)
round(v.0, v.3)
-- EXECUTION TIME:
4.10811
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 2
    x = v.0, v.1, v.2, v.3
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:28:48) 
-- CODE:
from numpy import*
x = v.0, v.1, v.2, v.3
	print(v.2)
round(v.0, v.3)
-- EXECUTION TIME:
2.1504
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1888/3139/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:08) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(v.2)
round(v.0, v.3):
	print(5.5,1.25)
	
-- ERROR:
File "XXXX", line 3
    print(v.2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:15) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(v.2)
round(v.0, v.3):
	print(5.5,1.25)
	
-- EXECUTION TIME:
0.984113
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(v.2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:15) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(v.2)
round(v.0, v.3):
	print(5.5,1.25)
	
-- EXECUTION TIME:
1.05156
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(v.2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:15) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(v.2)
round(v.0, v.3):
	print(5.5,1.25)
	
-- EXECUTION TIME:
1.10632
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(v.2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:15) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(v.2)
round(v.0, v.3):
	print(5.5,1.25)
	
-- EXECUTION TIME:
2.23844
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(v.2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:15) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(v.2)
round(v.0, v.3):
	print(5.5,1.25)
	
-- EXECUTION TIME:
2.56421
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(v.2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:31) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
round(v.0, v.3):
	print(5.5,1.25)
	
-- ERROR:
File "XXXX", line 3
    round(v.0, v.3):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:31) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
round(v.0, v.3):
	print(5.5,1.25)
	
-- ERROR:
File "XXXX", line 3
    round(v.0, v.3):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:38) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25

	print(5.5,1.25)
	
-- ERROR:
File "XXXX", line 4
    print(5.5,1.25)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:41) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(5.5,1.25)
	
-- ERROR:
File "XXXX", line 3
    print(5.5,1.25)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:41) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(5.5,1.25)
	
-- EXECUTION TIME:
0.606217
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(5.5,1.25)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:43) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(5.5,1.25)
	
-- ERROR:
File "XXXX", line 3
    print(5.5,1.25)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:40:45) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(5.5,1.25)
	
-- EXECUTION TIME:
0.618678
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(5.5,1.25)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:10) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(x=1.25)
	
-- ERROR:
File "XXXX", line 3
    print(x=1.25)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:41:14) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(x=1.25)
	
-- EXECUTION TIME:
0.965829
-- ERROR:
  File "/home/codebench/codes/1888/3139/main.py", line 3
    print(x=1.25)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:23) 
-- CODE:
from numpy import*
x = 5.5,11.1,9.8,5.6,1.25
	print(.25):
		
	
-- ERROR:
File "XXXX", line 3
    print(.25):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
